# firehose-geyser-plugin

./: .gitignore  Cargo.toml  README.md
proto/: account_plugins.proto  buf.gen.yaml  buf.md  buf.yaml
proto/sf/solana/type/v1/: type.proto
src/: block_printer.rs  config.rs  lib.rs  plugins.rs  state.rs  utils.rs
src/pb/: mod.rs  sf.solana.type.v1.rs
