[package]
name = "solana-account-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
agave-geyser-plugin-interface = "~2.0.10"
anyhow = "1.0.62"
config = "0.14.1"
tokio = "1.41.0"
crossbeam-channel = "0.5.13"
base58 = "0.2"
log = "0.4"
tracing = "0.1.40"
cargo-lock = "9.0.0"
git-version = "0.3.5"
log = "0.4.22"
vergen = "9.0.0"
