[package]
name = "solana-account-plugins"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "~2.0.10"
lazy_static = "1.5.0"
anyhow = "1.0.62"
config = "0.14.1"
tokio = "1.41.0"
crossbeam-channel = "0.5.13"
base58 = "0.2"
bincode = "1.3.3"
tracing = "0.1.40"
cargo-lock = "9.0.0"
prost-types = "0.11"
git-version = "0.3.5"
log = "0.4.22"
vergen = "9.0.0"
prost = "0.11.9"
solana-program = "1.17.7"
rbase64 = "2.0.3"
solana-rpc-client = "2.0.14"
solana-rpc-client-api = "2.0.14"
solana-transaction-status = "2.0.14"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
solana-sdk = "2.0.14"
sleep = "1.0.2"
env_logger = "0.9.3"
gxhash = "3.4.1"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
lto = true
codegen-units = 1
